# Edmonton-Urban-Growth-Intelligence-Dashboard-Open-Data-

./: .gitignore  CHAT_SUMMARY.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  ELITE_UPGRADES.md  FIX_404.md  MODEL_DOCUMENTATION.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_deploy.yml
config/: api_endpoints.yml  datasets.yml  parameters.yml
data/raw/: README.md
site/: app.js  index.html  styles.css
src/edmonton_growth/: __init__.py  aggregate.py  build_features.py  evaluate.py  export_artifacts.py  fetch_data.py  ingest.py  model.py  run_all.py  spatial_join.py  utils.py
tests/: test_features.py  test_spatial.py
